
         • ‘plot_RLum.Data.Image()’: Plot function for
           ‘RLum.Data.Image’ object.  Function also added to wrapper
           function ‘plot_RLum’

         • ‘get_Layout()’: Helper function to return a list with layout
           definitions for more homogenous plotting.

         • ‘analyse_pIRIRSequence()’: Function to analyse post-IR IRSL
           sequence measurements.

  Changes S4-objects, methods, classes:

         • ‘get_RLum.Analysis()’: Add support for inverse ‘record.id’
           selection, e.g. ‘record.id = -1’ selects all objects except
           the first.

         • ‘get_RLum.Results()’: Add support for data objects for
           objects produced by the function ‘calc_OSLLxTxRatio()’

         • ‘Risoe.BINfileData2RLum.Analysis()’: If the ‘pos’ value is
           invalid now the function does not return an error any
           longer. Instead ‘NA’ is returned.

  Bugfixes and changes:

         • ‘plot_RLum.Data.Spectrum()’:

             • Correct an error that caused a chrash when ‘xlim’ was
               set in a way that only one wavelength (colour value) was
               remained,

             • correct zebra-colour-pattern for rare cases of ‘xlim’
               settings using ‘plot.type = "persp"’ or ‘plot.type =
               "persp3d"’,

             • add argument new plot type ‘"transect"’ for plotting a
               transect along the time/temperature axis for a specific
               wavelength/channel intervall (#120, requested by Regina
               DeWitt),

             • correct function break for a single column matrix
               (single frame spectrum) by automatically resetting
               ‘plot.type’ to ‘single’ for single frame spectra,

             • colour rug (‘rug = TRUE’) implemented for plot type
               ‘"multiple.lines"’ (#130),

             • argument ‘xaxis.energy’ for wavelength energy conversion
               for 2D plots added (#141).

         • ‘plot_GrowthCurve()’:
